# chess_repo

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  rust-wasm.yml
apps/api/: package.json
apps/api/src/: app.test.ts  app.ts  server.ts
apps/api/src/modules/bots/: placeholder.ts
apps/api/src/modules/matchmaking/: placeholder.ts
apps/api/src/modules/realtime/: placeholder.ts
apps/api/src/routes/: health.ts
apps/web/: package.json  tsconfig.json  vitest.config.ts
apps/web/src/: App.tsx
apps/web/src/app/: providers.tsx  routes.tsx
apps/web/src/features/chess-normal/adapters/: wasmEngineAdapter.test.ts  wasmEngineAdapter.ts
apps/web/src/features/chess-normal/components/: ChessBoard.tsx  GameControls.tsx  Piece.tsx
apps/web/src/features/chess-normal/state/: gameStore.test.ts  gameStore.ts
apps/web/src/test/: setup.ts
crates/chess_core/: Cargo.toml
crates/chess_core/src/: board.rs  fen.rs  game.rs  lib.rs  move_gen.rs  rules.rs
crates/chess_core/src/tests/: checkmate.rs  legal_moves.rs  stalemate.rs
crates/chess_core_wasm/: Cargo.toml
crates/chess_core_wasm/src/: lib.rs
docs/: architecture.md  design.md  modes-and-variants.md  mvp-acceptance.md  roadmap.md  rules.md
docs/decisions/: 0001-monorepo-and-engine-boundary.md
docs/reports/: mvp-readiness-latest.md
scripts/: mvp-finalize.mjs
