[workspace]
members = [
  "crates/chess_core",
  "crates/chess_core_wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chess Platform"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
