[package]
name = "chess_core_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chess_core = { path = "../chess_core" }
serde.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
